spacing fix

--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
 
 #header {
     display: flex;
-    flex-grow: 1;
+    justify-content: space-between;
     align-items: center;
     padding: 10px;
     background-color: transparent !important; /* Overriding any existing background color */
@@ -17,7 +17,7 @@ body {
 #header h1 {
     flex-grow: 1;
     text-align: center;
-    margin: 0; /* Adjust as needed */
+    margin: 0 20px; /* Adjust as needed */
 }
 
 .content {
